--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_dotenv: ^6.0.0
   intl: ^0.20.2
+  supabase_flutter: ^2.10.0
 
 dev_dependencies:
   flutter_test:
@@ -17,4 +19,6 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  assets:
+    - .env
   uses-material-design: true
