--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   intl: ^0.20.2
   supabase_flutter: ^2.10.0
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
