--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   intl: ^0.20.2
   supabase_flutter: ^2.10.0
   uuid: ^4.5.1
+  fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
