--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "dart.flutterSdkPath": "/Users/victor.gaudiot/Desktop/projetos/.fvm/versions/3.35.1"
+  "dart.flutterSdkPath": ".fvm/versions/3.35.6"
 }
