--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 0.1.0
 
 environment:
-  sdk: ^3.9.0
+  sdk: ">=3.2.0 <4.0.0"
 
 dependencies:
   flutter:
@@ -15,7 +15,7 @@ dependencies:
   intl: ^0.20.2
   supabase_flutter: ^2.10.0
   uuid: ^4.5.1
-  fluttertoast: ^8.2.12
+  # fluttertoast: ^8.2.12
 
 dev_dependencies:
   flutter_test:
