update check translations action flutter version

--- a/.github/workflows/check_translations.yaml
+++ b/.github/workflows/check_translations.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.x.x' # Use a versão do Flutter do seu projeto
+          flutter-version: '3.35.1' # The Flutter version used in the project
           channel: 'stable'
 
       - name: Install dependencies
