--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_dotenv: ^6.0.0
   intl: ^0.20.2
   supabase_flutter: ^2.10.0
+  mask_text_input_formatter: ^2.9.0
   # fluttertoast: ^8.2.12
 
 dev_dependencies:
